# proptest-attr

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: lib.rs
tests/: compile-tests.rs  example.rs  test.rs
tests/ui/: 01-valid-example.rs  02-valid-example-mult-args.rs  03-no-strategy.rs  03-no-strategy.stderr  04-multiple-strategy.rs  04-multiple-strategy.stderr  05-unknown-argument.rs  05-unknown-argument.stderr  06-unknown-argument-2.rs  06-unknown-argument-2.stderr  07-invalid-strategy-string.rs  07-invalid-strategy-string.stderr  08-strategy-wrong-literal.rs  08-strategy-wrong-literal.stderr  09-strategy-invalid-expression.rs  09-strategy-invalid-expression.stderr  10-valid-example-mut-pattern.rs  11-argument-incorrect-type.rs  11-argument-incorrect-type.stderr
